--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Дистанционные IT-Колледжи [ТОП-9, 2025 год], колледжи с онлайн-обучением по информатике и программированию">
     <meta property="og:description" content="Рейтинг самых популярных дистанционных IT-колледжей, среднее специальное образование (ССО) в IT-сфере в Москве и регионах РФ в 2025 году: регулярно обновляется > реальные отзывы студентов">
     <meta property="og:image" content="1.jpg">
-    <meta property="og:url" content="https://example.com">
+    <meta property="og:url" content="https://distancionnye-it-kolledzhi.vercel.app/">
 
     <link rel="icon" type="image/png" href="favicon.png">
 
