--- a/index.html
+++ b/index.html
@@ -73,8 +73,12 @@ document.addEventListener("DOMContentLoaded", function () {
 
 <ol>
 <li><strong>&nbsp;🏆 <a href="https://go.2038.pro/ff62f92d35b09200?erid=2Vfnxwqx59A&m=1">Maxitet IT-колледж цифровых профессий</a></strong></li>
-<li><strong>&nbsp;🏆 <a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-colleg&deep_link=https://mitm.institute/college--fakultet--prikladnaya-informatika">Московский институт технологий и управления</a></strong> (по промокоду onlinekursy скидка 🎁 15% на заказ)</li>
+<li><strong>&nbsp;🏆 <a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-colleg&deep_link=https://mitm.institute/college--fakultet--prikladnaya-informatika">Московский институт технологий и управления (колледж)</a></strong> (по промокоду onlinekursy скидка 🎁 15% на заказ)</li>
 <li><strong>&nbsp;🏆 <a href="https://go.2038.pro/4c8f33ac02666d50?erid=LdtCJyCPH&m=1">TOP IT COLLEGE</a></strong></li>
+
+<li><strong><a href="https://view.edpstep.com/click?o=112&a=509&sub_id1=vercel-college&deep_link=https://mti.moscow/college"></a>Московский технологический институт (колледж)</strong></li>
+<li><strong><a href=""></a>Московский Институт Профессионального Образорвания (колледж)</strong> (по промокоду onlinekursy действует скидка 🎁 10% )</li>    
+    
 <li><strong><a href="https://go.2038.pro/9f91c8ee7d2335d0?erid=2VfnxvfxmGL&m=1">Цифровой колледж Skillbox</a></strong></li>
 <li><strong><a href="https://go.2038.pro/5b34eeeae6b25c20?erid=2VfnxxCoE8Q&m=1">Открытый социально-экономический колледж ( ОСЭК )</a></strong></li>
 <li><strong><a href="https://go.2038.pro/20af294eb71e7ac0?erid=LdtCKJdtX&m=1">Национальный социально-педагогический колледж (НСПК)</a></strong></li>
@@ -94,6 +98,10 @@ document.addEventListener("DOMContentLoaded", function () {
 <li><p><strong><a href="https://go.2038.pro/ff62f92d35b09200?erid=2Vfnxwqx59A&m=1">Maxitet IT-колледж цифровых профессий:</a></strong> гибридное обучение, 80% практики, возможность выбрать специальность после 1 курса, стажировки с первого курса, интеграция ИИ в программы.</p></li>
 <li><p><strong><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-colleg&deep_link=https://mitm.institute/college--fakultet--prikladnaya-informatika">Московский институт технологий и управления:</a></strong> полностью дистанционное обучение, гибкие сроки и график, доступная стоимость от 6670 ₽/мес, программы от колледжа до MBA.</p></li>
 <li><p><strong><a href="https://go.2038.pro/4c8f33ac02666d50?erid=LdtCJyCPH&m=1">TOP IT COLLEGE:</a></strong> очный и онлайн форматы, до 80% практики, стажировки в IT-компаниях, активная студенческая жизнь и хакатоны.</p></li>
+<li><p><strong><a href="https://view.edpstep.com/click?o=112&a=509&sub_id1=vercel-college&deep_link=https://mti.moscow/college">МТИ</a></strong>Гибкие форматы обучения – актуальные практические программы – поддержка кураторов – современная электронная среда – возможность продолжения образования в вузе – ориентир на трудоустройство и профессиональные навыки.</p></li>
+<li><p><strong><a href="">МИПО</a></strong></p></li>
+
+
 <li><p><strong><a href="https://go.2038.pro/9f91c8ee7d2335d0?erid=2VfnxvfxmGL&m=1">Цифровой колледж Skillbox:</a></strong> онлайн обучение, скидки до 60%, бесплатная профориентация, дипломы гособразца, гибкий график.</p></li>
 <li><p><strong><a href="https://go.2038.pro/5b34eeeae6b25c20?erid=2VfnxxCoE8Q&m=1">ОСЭК — Графический дизайн:</a></strong> специализация на дизайне и мультимедиа, очная и онлайн формы, практика в профильных компаниях, от 35 000 ₽/семестр.</p></li>
 <li><p><strong><a href="https://go.2038.pro/20af294eb71e7ac0?erid=LdtCKJdtX&m=1">НСПК:</a></strong> упор на IT и педагогические направления, доступные цены от 28 000 ₽/семестр, очная и дистанционная формы, дипломы гособразца.</p></li>
@@ -208,6 +216,41 @@ document.addEventListener("DOMContentLoaded", function () {
 </ul>
 <a class="btn" href="https://go.2038.pro/4c8f33ac02666d50?erid=LdtCJyCPH&m=1">Перейти на официальный сайт колледжа</a></div>
 
+
+<div class="course">
+<h2><a href="https://view.edpstep.com/click?o=112&a=509&sub_id1=vercel-college&deep_link=https://mti.moscow/college">4. Колледж Московского технологического института</a></h2>
+<p><img class="school-image" src="mti-college.png" alt="Колледж Московского технологического института" /></p>
+<p><strong>Официальный сайт: <a href="https://view.edpstep.com/click?o=112&a=509&sub_id1=vercel-college&deep_link=https://mti.moscow/college">mti.moscow</a></strong></p>
+<ul>
+<li><strong>Стоимость</strong> &ndash; обучение доступно от ориентировочно 80 000 ₽ в год в зависимости от программы и формы обучения, предусмотрены гибкие варианты оплаты и лояльные условия для студентов</li>
+<li><strong>Формат</strong> &ndash; очное, заочное и дистанционное обучение с электронными материалами, практическими заданиями и тестами для самостоятельной работы</li>
+<li><strong>Продолжительность</strong> &ndash; сроки обучения зависят от специальности и формы, стандартно от 1 года до нескольких лет</li>
+<li><strong>Документ</strong> &ndash; по завершении обучения выпускники получают диплом колледжа государственного образца</li>
+</ul>
+<p>Колледж Московского технологического института &ndash; это образовательное подразделение крупного столичного вуза, предлагающее среднее профессиональное подготовку по востребованным направлениям. Программы ориентированы на практические навыки и дают фундаментальные знания, необходимые для старта карьеры или продолжения учёбы в высшем образовании. Студенты получают доступ к библиотеке, электронным ресурсам и поддержке кураторов в процессе обучения. Форма обучения позволяет совмещать учёбу с работой или личными делами. Образовательный процесс выстроен так, чтобы выпускник мог адаптироваться к профессиональной среде и получить ощутимые компетенции уже в период учёбы.</p>
+<p><strong> Направления подготовки: </strong></p>
+<ul>
+<li>Строительство и эксплуатация зданий и сооружений</li>
+<li>Монтаж, наладка и эксплуатация электрооборудования промышленных и гражданских зданий</li>
+<li>Информационные системы и программирование</li>
+<li>Экономика и бухгалтерский учет (по отраслям)</li>
+<li>Банковское дело</li>
+</ul>
+<p><strong> Преимущества и особенности: </strong></p>
+<ul>
+<li>акцент на практические навыки и профессиональную подготовку</li>
+<li>гибкие формы обучения &ndash; очная, заочная, дистанционная</li>
+<li>поддержка кураторов и доступ к современным электронным материалам</li>
+<li>диплом колледжа, признанный на профессиональном рынке</li>
+<li>возможность продолжить образование в высшем институте</li>
+</ul>
+<h3>Отзывы учеников:</h3>
+<p>Студенты отмечают удобный формат обучения, возможность совмещать учёбу с работой и доступ к онлайн-ресурсам. Многие подчеркивают, что преподаватели доступны для консультаций и обучение построено таким образом, что материалы легко усваиваются даже при самоорганизации. Положительные отзывы включают благодарность за помощь кураторов и насыщенный учебный материал, который подходит для практических задач будущей профессии.</p>
+<a class="btn" href="https://view.edpstep.com/click?o=112&a=509&sub_id1=vercel-college&deep_link=https://mti.moscow/college">Перейти на официальный сайт ВУЗа</a></div>
+<p>&nbsp;</p>
+
+
+        
 <div class="course">
 <h2><a href="https://go.2038.pro/9f91c8ee7d2335d0?erid=2VfnxvfxmGL&m=1">4. Цифровой колледж Skillbox</a></h2>
 <p><img class="school-image" src="4.png" alt="Цифровой колледж Skillbox" /></p>
