--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ document.addEventListener("DOMContentLoaded", function () {
 <li><strong>&nbsp;🏆 <a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-colleg&deep_link=https://mitm.institute/college--fakultet--prikladnaya-informatika">Московский институт технологий и управления (колледж)</a></strong> (по промокоду onlinekursy скидка 🎁 15% на заказ)</li>
 <li><strong>&nbsp;🏆 <a href="https://go.2038.pro/4c8f33ac02666d50?erid=LdtCJyCPH&m=1">TOP IT COLLEGE</a></strong></li>
 
-<li><strong><a href="https://view.edpstep.com/click?o=112&a=509&sub_id1=vercel-college&deep_link=https://mti.moscow/college"></a>Московский технологический институт (колледж)</strong></li>
+<li><strong><a href="https://view.edpstep.com/click?o=112&a=509&sub_id1=vercel-college&deep_link=https://mti.moscow/college">Московский технологический институт (колледж)</a></strong></li>
 <li><strong><a href=""></a>Московский Институт Профессионального Образорвания (колледж)</strong> (по промокоду onlinekursy действует скидка 🎁 10% )</li>    
     
 <li><strong><a href="https://go.2038.pro/9f91c8ee7d2335d0?erid=2VfnxvfxmGL&m=1">Цифровой колледж Skillbox</a></strong></li>
@@ -98,7 +98,7 @@ document.addEventListener("DOMContentLoaded", function () {
 <li><p><strong><a href="https://go.2038.pro/ff62f92d35b09200?erid=2Vfnxwqx59A&m=1">Maxitet IT-колледж цифровых профессий:</a></strong> гибридное обучение, 80% практики, возможность выбрать специальность после 1 курса, стажировки с первого курса, интеграция ИИ в программы.</p></li>
 <li><p><strong><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-colleg&deep_link=https://mitm.institute/college--fakultet--prikladnaya-informatika">Московский институт технологий и управления:</a></strong> полностью дистанционное обучение, гибкие сроки и график, доступная стоимость от 6670 ₽/мес, программы от колледжа до MBA.</p></li>
 <li><p><strong><a href="https://go.2038.pro/4c8f33ac02666d50?erid=LdtCJyCPH&m=1">TOP IT COLLEGE:</a></strong> очный и онлайн форматы, до 80% практики, стажировки в IT-компаниях, активная студенческая жизнь и хакатоны.</p></li>
-<li><p><strong><a href="https://view.edpstep.com/click?o=112&a=509&sub_id1=vercel-college&deep_link=https://mti.moscow/college">МТИ</a></strong>Гибкие форматы обучения – актуальные практические программы – поддержка кураторов – современная электронная среда – возможность продолжения образования в вузе – ориентир на трудоустройство и профессиональные навыки.</p></li>
+<li><p><strong><a href="https://view.edpstep.com/click?o=112&a=509&sub_id1=vercel-college&deep_link=https://mti.moscow/college">МТИ:</a></strong> Гибкие форматы обучения – актуальные практические программы – поддержка кураторов – современная электронная среда – возможность продолжения образования в вузе – ориентир на трудоустройство и профессиональные навыки.</p></li>
 <li><p><strong><a href="">МИПО</a></strong></p></li>
 
 
