--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ document.addEventListener("DOMContentLoaded", function () {
 </ul>
 <h3>Отзывы учеников:</h3>
 <p>Студенты отмечают удобный формат обучения, возможность совмещать учёбу с работой и доступ к онлайн-ресурсам. Многие подчеркивают, что преподаватели доступны для консультаций и обучение построено таким образом, что материалы легко усваиваются даже при самоорганизации. Положительные отзывы включают благодарность за помощь кураторов и насыщенный учебный материал, который подходит для практических задач будущей профессии.</p>
-<a class="btn" href="https://view.edpstep.com/click?o=112&a=509&sub_id1=vercel-college&deep_link=https://mti.moscow/college">Перейти на официальный сайт ВУЗа</a></div>
+<a class="btn" href="https://view.edpstep.com/click?o=112&a=509&sub_id1=vercel-college&deep_link=https://mti.moscow/college">Перейти на официальный сайт колледжа</a></div>
 <p>&nbsp;</p>
 
 <div class="course">
@@ -277,7 +277,7 @@ document.addEventListener("DOMContentLoaded", function () {
 </ul>
 <h3>Отзывы учеников:</h3>
 <p>Студенты чаще отмечают удобный дистанционный формат обучения, понятную подачу учебных материалов и поддержку кураторов. Многие пишут о практической пользе полученных знаний для профессионального роста и смены профессии. Также отмечают возможность совмещать учёбу с работой и гибкий график процесса.</p>
-<a class="btn" href="https://view.edpstep.com/click?o=33&a=509&sub_id1=vercel-college&deep_link=https://mipo.msk.ru/highereducation/college">Перейти на официальный сайт ВУЗа</a></div>
+<a class="btn" href="https://view.edpstep.com/click?o=33&a=509&sub_id1=vercel-college&deep_link=https://mipo.msk.ru/highereducation/college">Перейти на официальный сайт колледжа</a></div>
 <p>&nbsp;</p>
 
         
