--- a/index.html
+++ b/index.html
@@ -87,7 +87,158 @@ document.addEventListener("DOMContentLoaded", function () {
 <li><strong><a href="https://synergy.ru/abiturientam/programmyi_obucheniya/programmist">Колледж Синергия</a></strong></li>
 </ol>
 
+     <h2>Вам могут быть интересны ВУЗы с программами дистанционного высшего образования</h2>
+        <ol>
+<li><strong><a href="https://go.2038.pro/0319392a6e6d4370?erid=2VfnxvoNy3e&m=1">&nbsp;🏆 Московский институт психологии</a> </strong> (по промокоду onlinekursy скидка 🎁 10%)</li>
+<ul>
+<li><a href="https://go.2038.pro/c36a9f1f2da9dbd0?erid=2VfnxvoNy3e&m=1">Психолого-педагогическое образование (онлайн-бакалавриат)</a></li>
+<li><a href="https://go.2038.pro/8bc83f2eb5b86c40?erid=2VfnxvoNy3e&m=1">Психология (онлайн-бакалавриат)</a></li>
+<li><a href="https://go.2038.pro/906c8334b19b84f0?erid=2VfnxvoNy3e&m=1">Педагогическое образование (онлайн-бакалавриат)</a></li>
+</ul>
 
+<li><strong><a href="https://smart-inc.ru/masters-degree?gcao=21446&gcpc=f1c52">&nbsp;🏆 Онлайн-Институт психологии Smart</a> </strong></li>
+<ul>
+<li><a href="https://smart-inc.ru/masters-degree?gcao=21446&gcpc=f1c52">Психологическое консультирование (онлайн-магистратура)</a></li>
+<li><a href="https://smart-inc.ru/bachelors-degree?gcao=34147&gcpc=f1c52">Психология (дистанционный бакалавриат)</a></li>
+</ul>
+<li><strong><a href="https://go.2038.pro/58dbdeb43a64f040?erid=LdtCKVRoV&m=1">&nbsp;🏆 Психодемия</a> </strong> (по промокоду OnlineKursy действует скидка 🎁 5000 руб)</li>
+<ul>
+<li><a href="https://go.2038.pro/de1e27a6c0cfaa00?erid=LdtCKVRoV&m=1">Психология личности (магистратура)</a></li>
+<li><a href="https://go.2038.pro/2002a68279e06380?erid=LdtCKVRoV&m=1">Психология управления - Бизнес-психология в&nbsp;цифровой среде (магистратура)</a></li>
+</ul>
+<li><strong><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee&deep_link=https://mitm.institute/magistratura--fakultet--psihologiya">Московский институт технологий и управления</a></strong> (по промокоду onlinekursy скидка 🎁 15%)</li>
+<p><strong><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-psy-1&deep_link=https://mitm.institute/psihologiya-1--bakalavriat">Онлайн-Бакалавриат по психологии</a></strong></p>
+<ul>
+
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-psy-2&deep_link=https://mitm.institute/psihologicheskoe-konsultirovanie-1--bakalavriat">Психологическое консультирование</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-psy-3&deep_link=https://mitm.institute/klinicheskaya-psihologiya-1--bakalavriat">Клиническая психология</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-psy-4&deep_link=https://mitm.institute/psihoanaliz--bakalavriat">Психоанализ</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-psy-5&deep_link=https://mitm.institute/psihologiya-semejnyh-otnoshenij--bakalavriat">Психология семейных отношений</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-psy-6&deep_link=https://mitm.institute/korrekczionnaya-psihologiya-s-osnovami-logopedii--bakalavriat">Коррекционная психология с основами логопедии</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-psy-7&deep_link=https://mitm.institute/psihologiya-upravleniya--bakalavriat">Психология управления</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-psy-8&deep_link=https://mitm.institute/psiholog-pedagog-1--bakalavriat">Педагог-психолог</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-psy-9&deep_link=https://mitm.institute/logoped-defektolog-1--bakalavriat">Логопед-дефектолог</a></li>
+</ul>
+<p><strong> <a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee&deep_link=https://mitm.institute/magistratura--fakultet--psihologiya"> Онлайн-магистратура по психологии</a></strong></p>
+<ul>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-psy-10&deep_link=https://mitm.institute/kouching-i-psihologicheskoe-konsultirovanie--magistratura">Коучинг и психологическое консультирование</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-psy-11&deep_link=https://mitm.institute/organizaczionnaya-psihologiya-1--magistratura">Организационная психология</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-psy-12&deep_link=https://mitm.institute/psihologiya-i-pedagogika-dopolnitelnogo-obrazovaniya-detej--magistratura">Психология и педагогика дополнительного образования детей</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-psy-13&deep_link=https://mitm.institute/psihologiya-obrazovaniya--magistratura">Психология образования</a></li>
+</ul>
+
+<li><strong><a href="https://view.edpstep.com/click?o=33&a=509&sub_id1=versel-vyshee&deep_link=https://mipo.msk.ru/highereducation/psihologiya">Московский Институт Профессионального Образования</a></strong> (по промокоду onlinekursy скидка 🎁 10%)</li>
+<p><strong>Онлайн-Бакалавриат по психологии</strong></p>
+<ul>
+
+<li><a href="https://view.edpstep.com/click?o=33&a=509&sub_id1=versel-vyshee-prakt-psy&deep_link=https://mipo.msk.ru/highereducation/psihologiya/prakticheskaya-psihologiya">Практическая психология</a></li>
+<li><a href="https://view.edpstep.com/click?o=33&a=509&sub_id1=versel-vyshee-kouching&deep_link=https://mipo.msk.ru/highereducation/psihologiya/kouching-i-psihologicheskoe-konsultirovanie">Коучинг и психологическое консультирование</a></li>
+<li><a href="https://view.edpstep.com/click?o=33&a=509&sub_id1=versel-vyshee-soczialnaya-psihologiya&deep_link=https://mipo.msk.ru/highereducation/psihologiya/soczialnaya-psihologiya">Социальная психология</a></li>
+<li><a href="https://view.edpstep.com/click?o=33&a=509&sub_id1=versel-vyshee-organizaczionnaya-psihologiya&deep_link=https://mipo.msk.ru/highereducation/psihologiya/organizaczionnaya-psihologiya-1">Организационная психология</a></li>
+
+</ul>
+
+<li><strong><a href="https://go.avred.online/60a1dc9e1423da90?erid=LdtCJzqc8&m=1">ИППСС</a> </strong> </li>
+<p><strong>Направления онлайн-бакалавриата по психологии от ИППСС:</strong></p>  
+<ul>
+<li><a href="https://go.avred.online/fed28da2c4fc7cd0?erid=LdtCJzqc8&m=1">Психология семейных отношений</a></li>
+<li><a href="https://go.avred.online/cca221a6fc43ebc0?erid=LdtCJzqc8&m=1">Организационная психология</a></li>
+<li><a href="https://go.avred.online/8d80d451ce20a500?erid=LdtCJzqc8&m=1">Практическая психология</a></li>
+<li><a href="https://go.avred.online/5a1cfb9889802d50?erid=LdtCJzqc8&m=1">Коучинг</a></li>
+<li><a href="https://go.avred.online/33c2da1ea41d0aa0?erid=LdtCJzqc8&m=1">Детская психология</a></li>   
+</ul>
+    
+
+<li><strong><a href="https://go.2038.pro/1c0d9eaaf2145dd0?erid=LdtCKCxkP&m=1">Нетология</a> </strong></li>
+<p><strong>Онлайн-Бакалавриат:</strong></p>
+<ul>
+<li><a href="https://go.2038.pro/6ac2b81ceff33380?erid=LdtCKCxkP&m=1">Финансы и анализ данных</a></li>
+<li><a href="https://go.2038.pro/13911827adf6c530?erid=LdtCKCxkP&m=1">Разработка IT‑продуктов и информационных систем</a></li>
+<li><a href="https://go.2038.pro/18fe980487650d20?erid=LdtCKCxkP&m=1">Программные системы и автоматизация процессов разработки</a></li>
+<li><a href="https://go.2038.pro/633961046d1e9eb0?erid=LdtCKCxkP&m=1">Проектный менеджмент</a></li>
+<li><a href="https://go.2038.pro/1aee61c7719f5ed0?erid=LdtCKCxkP&m=1">Медиакоммуникации</a></li>
+</ul>
+<p><strong>Онлайн-магистратура:</strong></p>
+<ul>
+<li><a href="https://go.2038.pro/552e9fc34dc80820?erid=LdtCKCxkP&m=1">LegalTech: автоматизация юридических процессов</a></li>
+<li><a href="https://go.2038.pro/856ecea652628d60?erid=LdtCKCxkP&m=1">Кибербезопасность</a></li>
+<li><a href="https://go.2038.pro/34f39aff4b79aa40?erid=LdtCKCxkP&m=1">Цифровые продукты: создание и развитие</a></li>
+<li><a href="https://go.2038.pro/9d5543444a314930?erid=LdtCKCxkP&m=1">Управление цифровыми проектами</a></li>
+<li><a href="https://go.2038.pro/491c3a66484f1cc0?erid=LdtCKCxkP&m=1">Продуктовый дизайн</a></li>
+<li><a href="https://go.2038.pro/73169174485eca60?erid=LdtCKCxkP&m=1">Инженерия данных</a></li>
+<li><a href="https://go.2038.pro/09108dcbe4e3eb30?erid=LdtCKCxkP&m=1">Продуктовый маркетинг и аналитика</a></li>
+<li><a href="https://go.2038.pro/6ee83f35a7026350?erid=LdtCKCxkP&m=1">Разработка IT-продукта</a></li>
+<li><a href="https://go.2038.pro/83d47868bd8fe630?erid=LdtCKCxkP&m=1">Инженерия машинного обучения</a></li>
+<li><a href="https://go.2038.pro/7fd146bf18fa6270?erid=LdtCKCxkP&m=1">Прикладной искусственный интеллект</a></li>
+<li><a href="https://go.2038.pro/797eabdbdd2cc440?erid=LdtCKCxkP&m=1">Современные технологии безопасных систем</a></li>
+</ul>
+<li><strong><a href="https://go.2038.pro/8404b424ad15e990?erid=LdtCK5EkP&m=1">Skillfactory</a> </strong></li>
+<p><strong>Онлайн-магистратура:</strong></p>
+<ul>
+<li><a href="https://go.2038.pro/db238f89861fac90?erid=LdtCK5EkP&m=1">Науки о данных и машинное обучение</a></li>
+<li><a href="https://go.2038.pro/28ca3e9ebfa713d0?erid=LdtCK5EkP&m=1">Информационная безопасность</a></li>
+<li><a href="https://go.2038.pro/e708576b0a3a5bb0?erid=LdtCK5EkP&m=1">Обработка естественного языка (NLP) в лингвистике и IT</a></li>
+<li><a href="https://go.2038.pro/08305cd7f65f19b0?erid=LdtCK5EkP&m=1">Разработка программного обеспечения</a></li>
+<li><a href="https://go.2038.pro/2aab3220382314d0?erid=LdtCK5EkP&m=1">Компьютерное зрение и нейронные сети</a></li>
+<li><a href="https://go.2038.pro/49a17d18d55ffdb0?erid=LdtCK5EkP&m=1">Прикладной анализ данных и машинное обучение</a></li>
+</ul>
+<li><strong><a href="https://view.edpstep.com/click?o=30&a=509&sub_id1=vercel-vyshee&deep_link=https://practicum.yandex.ru/high-education/">Яндекс Практикум</a> </strong></li>
+<p><strong>Онлайн-магистратура:</strong></p>
+<ul>
+<li><a href="https://view.edpstep.com/click?o=30&a=509&sub_id1=vercel-vyshee-dop-1&deep_link=https://practicum.yandex.ru/high-education/higher-info-security/">Кибербезопасность</a></li>
+<li><a href="https://view.edpstep.com/click?o=30&a=509&sub_id1=vercel-vyshee-dop-2&deep_link=https://practicum.yandex.ru/high-education/higher-it-product-mgmt/">Управление IT‑продуктами</a></li>
+<li><a href="https://view.edpstep.com/click?o=30&a=509&sub_id1=vercel-vyshee-dop-3&deep_link=https://practicum.yandex.ru/high-education/higher-data-analytics/">Науки о данных и искусственный интеллект</a></li>
+<li><a href="https://view.edpstep.com/click?o=30&a=509&sub_id1=vercel-vyshee-dop-4&deep_link=https://practicum.yandex.ru/high-education/higher-front-back-dev/">Фронтенд- и бэкенд-разработка</a></li>
+<li><a href="https://view.edpstep.com/click?o=30&a=509&sub_id1=vercel-vyshee-dop-5&deep_link=https://practicum.yandex.ru/high-education/cloud-services-engineer/">DevOps-инженер облачных сервисов</a></li>
+</ul>
+<li><strong><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee&deep_link=https://mitm.institute/bakalavriat">Московский Институт Технологий и Управления</a> </strong> (по промокоду onlinekursy скидка 🎁 15%)</li>
+<p><strong><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee&deep_link=https://mitm.institute/bakalavriat">Программы бакалавриата:</a></strong></p>  
+<ul>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-1&deep_link=https://mitm.institute/bakalavriat--fakultet--yurisprudencziya">Юриспруденция</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-2&deep_link=https://mitm.institute/bakalavriat--fakultet--dizajn">Дизайн</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-3&deep_link=https://mitm.institute/bakalavriat--fakultet--prikladnaya-informatika">Информатика</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-4&deep_link=https://mitm.institute/bakalavriat--fakultet--marketing">Маркетинг</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-5&deep_link=https://mitm.institute/bakalavriat--fakultet--menedzhment">Менеджмент</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vvyshee-dop-6&deep_link=https://mitm.institute/bakalavriat--fakultet--stroitelstvo">Строительство</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-7&deep_link=https://mitm.institute/bakalavriat--fakultet--teploenergetika-i-teplotehnika">Теплоэнергетика и теплотехника</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-8&deep_link=https://mitm.institute/bakalavriat--fakultet--tehnosfernaya-bezopasnost">Техносферная безопасность</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-9&deep_link=https://mitm.institute/bakalavriat--fakultet--elektroenergetika-i-elektrotehnika">Электроэнергетика и электротехника</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-10&deep_link=https://mitm.institute/bakalavriat--fakultet--ekonomika">Экономика</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-11&deep_link=https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-11&deep_link=https://mitm.institute/bakalavriat--fakultet--pedagogicheskoe-obrazovanie">Педагогическое образование</a></li>
+</ul>
+<p><strong><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-12&deep_link=https://mitm.institute/magistratura">Программы магистратуры:</a></strong></p>
+<ul>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-13&deep_link=https://mitm.institute/magistratura--fakultet--yurisprudencziya">Юриспруденция</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-14&deep_link=https://mitm.institute/magistratura--fakultet--dizajn">Дизайн</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-15&deep_link=https://mitm.institute/magistratura--fakultet--prikladnaya-informatika">Информатика</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-16&deep_link=https://mitm.institute/magistratura--fakultet--marketing">Маркетинг</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-17&deep_link=https://mitm.institute/magistratura--fakultet--menedzhment">Менеджмент</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-18&deep_link=https://mitm.institute/magistratura--fakultet--stroitelstvo">Строительство</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-19&deep_link=https://mitm.institute/magistratura--fakultet--ekonomika">Экономика</a></li>
+<li><a href="https://leadmagnet.scaletrk.com/click?o=19&a=5&sub_id1=vercel-vyshee-dop-20&deep_link=https://mitm.institute/magistratura--fakultet--pedagogicheskoe-obrazovanie">Педагогическое образование</a></li>
+</ul>
+
+    <li><strong><a href="https://view.edpstep.com/click?o=33&a=509&sub_id1=versel-vyshee-dop&deep_link=https://mipo.msk.ru/highereducation">Московский Институт Профессионального Образования</a></strong> (по промокоду onlinekursy скидка 🎁 10%)</li>
+    <li><strong><a href="https://view.edpstep.com/click?o=112&a=509&sub_id1=vercel-vyshee&deep_link=https://mti.moscow/vyisshee-obrazovanie">Московский Технологический Институт (МТИ)</a></strong>
+
+
+    
+<h2>ВУЗы с программами профессиональной переподготовки</H2>
+   
+<li><strong><a href="https://go.2038.pro/038712393c089700?erid=LdtCK2DsV&m=1">НАДПО</a> </strong> (по промокоду onlinekursy действует скидка 🎁 5%)</li>
+<li><strong><a href="https://view.edpstep.com/click?o=33&a=509&sub_id1=vercel-vyshee-perep&deep_link=https://mipo.msk.ru/">Московский институт профессионального образования</a> </strong> (по промокоду onlinekursy действует скидка 🎁 10%)</li>
+<li><strong><a href="https://click.goleadcpa.ru/click?o=14&a=5&sub_id1=vercel-vyshee-perep&deep_link=https://moscow.mba/programs">Moscow Business Academy</a></strong> (по промокоду onlinekursy скидка 🎁 10%)</li>
+<li><strong><a href="https://view.edpstep.com/click?o=95&a=509&sub_id1=vercel-vyshee-perep&deep_link=https://eduson.academy/catalogue/popular">Eduson Academy</a> </strong> (по промокоду onlinekursy скидка 🎁 5%)</li>
+<li><strong><a href="https://go.2038.pro/09925e3f825a37b0?erid=LdtCKE5Jt&m=1">НИИДПО</a> </strong></li>
+<li><strong><a href="https://go.2038.pro/5c48c969536e1c00?erid=LdtCKEyiP&m=1">Talentsy</a> </strong> (по промокоду EDPART5 скидка 🎁 5%)</li>
+<li><strong><a href="https://go.2038.pro/b76583be5d34ed10?erid=LdtCKhDjq&m=1">НЦРДО</a> </strong> (по промокоду onlinekursy действует скидка 🎁 5%)</li>
+<li><strong><a href="https://view.edpstep.com/click?o=9&a=509&sub_id1=vercel-vyshee-perep&deep_link=https://ipo.msk.ru/">Институт профессионального образования</a> </strong></li>
+<li><strong><a href="https://view.edpstep.com/click?o=39&a=509&sub_id1=vercel-vyshee-perep&deep_link=https://mbschool.ru/">Moscow Business School</a> </strong></li>
+<li><strong><a href="https://view.edpstep.com/click?o=28&a=509&sub_id1=vercel-vyshee-perep&deep_link=https://uprav.ru/">Русская Школа Управления</a> </strong></li>
+<li><strong><a href="https://go.2038.pro/b96131462a1e3300?erid=2VfnxwfZnUp&m=1">АПОК</a> </strong></li>
+<li><strong><a href="https://go.2038.pro/d03a5841701c2a20?erid=2Vfnxy2E93N&m=1">НИПКЭФ</a> </strong> (по промокоду onlinekursy действует скидка 🎁 5%)</li>
+<li><strong><a href="https://view.edpstep.com/click?o=4&a=509&sub_id1=vercel-vyshee-perep&deep_link=https://sf.education/catalog">SF Education</a> </strong> (по промокоду onlinekursy скидка 🎁 15%)</li>
+</ol>
 
 
 <div class="course">
